force-app/main/default/objects/Scoring_Configuration__mdt/Scoring_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configurable CV scoring weights, thresholds, and tier boundaries.</description>
    <label>Scoring Configuration</label>
    <pluralLabel>Scoring Configurations</pluralLabel>
</CustomObject>