force-app/main/default/objects/Scoring_Configuration__mdt/fields/CV_Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>CV_Score_Weight__c</fullName>
    <label>CV Score Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>