force-app/main/default/objects/Scoring_Configuration__mdt/fields/Location_Weight__c.field-meta.xml
<CustomField>
    <fullName>Location_Weight__c</fullName>
    <label>Location Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>