force-app/main/default/objects/Scoring_Configuration__mdt/fields/Poor_Match_Max__c.field-meta.xml
<CustomField>
    <fullName>Poor_Match_Max__c</fullName>
    <label>Poor Match Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>