force-app/main/default/objects/Scoring_Configuration__mdt/fields/Potential_Match_Min__c.field-meta.xml
<CustomField>
    <fullName>Potential_Match_Min__c</fullName>
    <label>Potential Match Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>