force-app/main/default/objects/Scoring_Configuration__mdt/fields/Questionnaire_Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Score_Weight__c</fullName>
    <label>Questionnaire Score Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>