force-app/main/default/objects/Scoring_Configuration__mdt/fields/Questionnaire_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Threshold__c</fullName>
    <label>Questionnaire Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>