force-app/main/default/objects/Scoring_Configuration__mdt/fields/Review_Required_Min__c.field-meta.xml
<CustomField>
    <fullName>Review_Required_Min__c</fullName>
    <label>Review Required Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>