force-app/main/default/objects/Scoring_Configuration__mdt/fields/Skills_Weight_Nice_To_Have__c.field-meta.xml
<CustomField>
    <fullName>Skills_Weight_Nice_To_Have__c</fullName>
    <label>Skills Weight Nice To Have</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>