force-app/main/default/objects/Scoring_Configuration__mdt/fields/Skills_Weight_Total__c.field-meta.xml
<CustomField>
    <fullName>Skills_Weight_Total__c</fullName>
    <label>Skills Weight Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>